# ibus-table-wubi

./: Makefile.am  README  configure.ac
icons/: Makefile.am
m4/: Makefile.am
tables/: Makefile.am  wubi2008.txt  wubi86.txt
